Added Sign Up Button and designed the page

--- a/index.html
+++ b/index.html
@@ -15,19 +15,22 @@
     <form action="">
         <div class="emailContainer">
             <label for="email">Email: </label>
-            <input type="email">
+            <input class="emailInput" type="email" placeholder="example@gmail.com">
         </div>
         <div class="passwordContainer">
             <label for="password">Password: </label>
-            <input type="password">
+            <input class="passwordInput" type="password" placeholder="password">
         </div>
         <div class="confirmPasswordContainer">
             <label for="confirmPassword">Confirm Password: </label>
-            <input type="password">
+            <input class="confirmPasswordInput" type="confirmPassword" placeholder="Enter password again">
         </div>
         <div class="phoneNumberContainer">
             <label for="phoneNumber">Phone Number: </label>
-            <input type="tel">
+            <input class="telephoneInput" type="tel" placeholder="Phone Number">
+        </div>
+        <div class="signUpButton">
+            <p>Sign Up</p>
         </div>
     </form>
 </body>
