--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Bree+Serif&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="styles.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script> 
     <title>Sign Up Page</title>
 </head>
 <body>
@@ -15,21 +16,21 @@
     <form action="">
         <div class="emailContainer">
             <label for="email">Email: </label>
-            <input class="emailInput" type="email" placeholder="example@gmail.com">
+            <input class="emailInput" type="email" id="email" placeholder="example@gmail.com">
         </div>
         <div class="passwordContainer">
             <label for="password">Password: </label>
-            <input class="passwordInput" type="password" placeholder="password">
+            <input class="passwordInput" type="password" placeholder="Enter Password">
         </div>
         <div class="confirmPasswordContainer">
             <label for="confirmPassword">Confirm Password: </label>
-            <input class="confirmPasswordInput" type="confirmPassword" placeholder="Enter password again">
+            <input class="confirmPasswordInput" type="password" placeholder="Enter Password Again">
         </div>
         <div class="phoneNumberContainer">
             <label for="phoneNumber">Phone Number: </label>
             <input class="telephoneInput" type="tel" placeholder="Phone Number">
         </div>
-        <div class="signUpButton">
+        <div class="signUpButton" id="signUpButton">
             <p>Sign Up</p>
         </div>
     </form>
